--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "npx eslint src --ext .ts,.tsx"
   },
   "dependencies": {
+    "-": "^0.0.1",
+    "@rocketseat/eslint-config": "^1.1.3",
+    "D": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "styled-components": "^5.3.5"
@@ -18,6 +22,7 @@
     "@types/react-dom": "^18.0.6",
     "@types/styled-components": "^5.1.25",
     "@vitejs/plugin-react": "^2.0.0",
+    "eslint": "^8.19.0",
     "typescript": "^4.6.4",
     "vite": "^3.0.0"
   }
