--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@hookform/resolvers": "^2.9.6",
     "@rocketseat/eslint-config": "^1.1.3",
     "D": "^1.0.0",
+    "date-fns": "^2.28.0",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
