--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@rocketseat/eslint-config": "^1.1.3",
     "D": "^1.0.0",
     "date-fns": "^2.28.0",
+    "immer": "^9.0.15",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
